--- a/project-back-deteil-pro/docker-compose.yml
+++ b/project-back-deteil-pro/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
   postgresql:
-    image: postgres
-    container_name: lesson
+    image: postgres:16
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=lesson
-      - POSTGRES_PASSWORD=lesson
-      - POSTGRES_DB=lesson
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: lesson
+      POSTGRES_DB: postgres
     volumes:
-      - postgresql_data:/var/lib/postgresql/data
+      - postgresql_data_second:/var/lib/postgresql/data
     restart: always
 
 volumes:
-  postgresql_data:
+  postgresql_data_second:
