--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "class-validator": "^0.14.3",
     "pg": "^8.17.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
